# roguelike-specs

./: Cargo.toml
.cargo/: config.toml
assets/: hero.ron
config/: display.ron  input.ron
src/: glyph.rs  health.rs  input.rs  main.rs  map.rs  moving.rs  player.rs  position.rs  render.rs  respawn.rs  room.rs  state.rs  tile.rs
src/components/: input.rs  mod.rs  player.rs  position.rs
src/render/: piston.rs  tcod.rs
src/resources/: map.rs  mod.rs
src/systems/: mod.rs  moving.rs
