[package]
name = "roguelike-specs"
version = "0.1.0"
authors = ["Gabriel Bitencourt <gabrielbitencourt25@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
amethyst = { version = "0.15", features = ["vulkan"] }